--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="manifest" href="manifest.webmanifest">
+<meta name="theme-color" content="#4c5cff">
+
 <title>블록 두뇌게임 (모바일/PC)</title>
 <style>
   :root{
